--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <span class="current-lang">EN</span>
             <div class="language-dropdown">
                 <a href="index.html" class="selected">English</a>
-                <!-- <a href="zh-cn/index.html">简体中文</a> -->
-                <!-- <a href="zh-tw/index.html">繁體中文</a> -->
+                <a href="zh-cn/index.html">简体中文</a>
+                <a href="zh-tw/index.html">繁體中文</a>
             </div>
         </div>
     </header>
