--- a/projects/001_eco-friendly-furniture.html
+++ b/projects/001_eco-friendly-furniture.html
@@ -23,9 +23,9 @@
         <div class="language-selector">
             <span class="current-lang">EN</span>
             <div class="language-dropdown">
-                <a href="eco-friendly-furniture.html" class="selected">English</a>
-                <a href="../zh-cn/projects/eco-friendly-furniture.html">简体中文</a>
-                <a href="../zh-tw/projects/eco-friendly-furniture.html">繁體中文</a>
+                <a href="001_eco-friendly-furniture.html" class="selected">English</a>
+                <a href="../zh-cn/projects/001_eco-friendly-furniture.html">简体中文</a>
+                <a href="../zh-tw/projects/001_eco-friendly-furniture.html">繁體中文</a>
             </div>
         </div>
     </header>
