--- a/projects/002_smart-home-device.html
+++ b/projects/002_smart-home-device.html
@@ -23,9 +23,9 @@
         <div class="language-selector">
             <span class="current-lang">EN</span>
             <div class="language-dropdown">
-                <a href="smart-home-device.html" class="selected">English</a>
-                <a href="../zh-cn/projects/smart-home-device.html">简体中文</a>
-                <a href="../zh-tw/projects/smart-home-device.html">繁體中文</a>
+                <a href="002_smart-home-device.html" class="selected">English</a>
+                <a href="../zh-cn/projects/002_smart-home-device.html">简体中文</a>
+                <a href="../zh-tw/projects/002_smart-home-device.html">繁體中文</a>
             </div>
         </div>
     </header>
