--- a/projects/003_urban-mobility.html
+++ b/projects/003_urban-mobility.html
@@ -23,9 +23,9 @@
         <div class="language-selector">
             <span class="current-lang">EN</span>
             <div class="language-dropdown">
-                <a href="urban-mobility.html" class="selected">English</a>
-                <a href="../zh-cn/projects/urban-mobility.html">简体中文</a>
-                <a href="../zh-tw/projects/urban-mobility.html">繁體中文</a>
+                <a href="003_urban-mobility.html" class="selected">English</a>
+                <a href="../zh-cn/projects/003_urban-mobility.html">简体中文</a>
+                <a href="../zh-tw/projects/003_urban-mobility.html">繁體中文</a>
             </div>
         </div>
     </header>
