--- a/projects/004_wearable-tech.html
+++ b/projects/004_wearable-tech.html
@@ -23,9 +23,9 @@
         <div class="language-selector">
             <span class="current-lang">EN</span>
             <div class="language-dropdown">
-                <a href="wearable-tech.html" class="selected">English</a>
-                <a href="../zh-cn/projects/wearable-tech.html">简体中文</a>
-                <a href="../zh-tw/projects/wearable-tech.html">繁體中文</a>
+                <a href="004_wearable-tech.html" class="selected">English</a>
+                <a href="../zh-cn/projects/004_wearable-tech.html">简体中文</a>
+                <a href="../zh-tw/projects/004_wearable-tech.html">繁體中文</a>
             </div>
         </div>
     </header>
