--- a/projects/005_kitchen-innovation.html
+++ b/projects/005_kitchen-innovation.html
@@ -23,9 +23,9 @@
         <div class="language-selector">
             <span class="current-lang">EN</span>
             <div class="language-dropdown">
-                <a href="kitchen-innovation.html" class="selected">English</a>
-                <a href="../zh-cn/projects/kitchen-innovation.html">简体中文</a>
-                <a href="../zh-tw/projects/kitchen-innovation.html">繁體中文</a>
+                <a href="005_kitchen-innovation.html" class="selected">English</a>
+                <a href="../zh-cn/projects/005_kitchen-innovation.html">简体中文</a>
+                <a href="../zh-tw/projects/005_kitchen-innovation.html">繁體中文</a>
             </div>
         </div>
     </header>
