--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -23,7 +23,7 @@
         <div class="language-selector">
             <span class="current-lang">简体中文</span>
             <div class="language-dropdown">
-                <a href="/">English</a>
+                <a href="https://chen-wangyu.github.io/">English</a>
                 <a href="index.html" class="selected">简体中文</a>
                 <a href="../zh-tw/index.html">繁體中文</a>
             </div>
